Update hash enrichment response structure

--- a/enrich_reports.ipynb
+++ b/enrich_reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6b1b0424-de12-47d2-9754-54cd7450f801",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ae7882cf-d953-4286-aeae-093f3d16a555",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a9bb275c-547a-45e2-a27d-1bf96076d7a1",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8b164bf1-5731-4f05-a83a-18e62ddfb98b",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3f292f58-ef97-4cad-a8bb-09a05ed0ba48",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "832b7e80-66d3-48a0-ab04-4ca3594d0c14",
    "metadata": {},
    "outputs": [],
@@ -101,19 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ac54c2e1-45d1-4d57-9bdd-079e212f22c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "@sleep_and_retry\n",
     "@limits(calls=1, period=20) # VT restricts to 4 QPM\n",
-    "def enrich_vt(vt_client, filehashes):\n",
-    "    res = dict()\n",
+    "def enrich_hashes(vt_client, filehashes):\n",
+    "    res = defaultdict(dict)\n",
     "    for fh in filehashes:\n",
     "        try:\n",
     "            file = vt_client.get_object(f\"/files/{fh}\")\n",
-    "            res[fh] = f\"https://www.virustotal.com/gui/file/{fh}\"\n",
+    "            res[fh][\"VirusTotal\"] = f\"https://www.virustotal.com/gui/file/{fh}\"\n",
     "        except:\n",
     "            pass\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d6af52f0-3b92-4573-a660-5e6c3367d968",
    "metadata": {},
    "outputs": [],
@@ -154,21 +154,17 @@
     "\n",
     "        enriched_mitre = enrich_mitre(mitre)\n",
     "\n",
-    "        enriched_md5s_vt = {}\n",
+    "        enriched_md5s = {}\n",
     "        if len(md5s) > 0:\n",
-    "            enriched_md5s_vt = enrich_vt(vt_client, md5s)\n",
+    "            enriched_md5s = enrich_hashes(vt_client, md5s)\n",
     "\n",
-    "        enriched_sha1s_vt = {}\n",
+    "        enriched_sha1s = {}\n",
     "        if len(sha1s) > 0:\n",
-    "            enriched_sha1s_vt = enrich_vt(vt_client, sha1s)\n",
+    "            enriched_sha1s = enrich_hashes(vt_client, sha1s)\n",
     "\n",
-    "        enriched_sha256s_vt = {}\n",
+    "        enriched_sha256s = {}\n",
     "        if len(sha256s) > 0:\n",
-    "            enriched_sha256s_vt = enrich_vt(vt_client, sha256s)\n",
-    "\n",
-    "        enriched_md5s = {\"VirusTotal\": enriched_md5s_vt} if enriched_md5s_vt else {}\n",
-    "        enriched_sha1s = {\"VirusTotal\": enriched_sha1s_vt} if enriched_sha1s_vt else {}\n",
-    "        enriched_sha256s = {\"VirusTotal\": enriched_sha256s_vt} if enriched_sha256s_vt else {}\n",
+    "            enriched_sha256s = enrich_hashes(vt_client, sha256s)\n",
     "\n",
     "        data = {\n",
     "            \"report_id\": report_id,\n",
