Add VirusTotal links in detail panel

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "b7dc924e-d3c5-48b9-be3c-083ccda549cf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "94bd6c3b-291d-45e9-aa1a-edf965b8f895",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "85dcb0ba-8e8d-4161-9413-1a74eca01be3",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "0a6422d6-c6dd-4c96-8713-e2d57ae1346c",
    "metadata": {},
    "outputs": [
@@ -176,13 +176,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied 336 enriched reports\n"
+      "Copied 336 reports\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    copy_rows(copy_reports=False, copy_enriched_reports=True)"
+    "    copy_rows(copy_reports=True, copy_enriched_reports=False)"
    ]
   }
  ],
