Upload files to Pinecone in similarity script

--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -5,21 +5,65 @@
    "execution_count": 1,
    "id": "8efc6bdd-e5b1-41cf-95bd-516db9a5a6a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/udp/Code/sans-cyber-hack-2025/sans-venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
     "from bs4 import BeautifulSoup\n",
     "import chromadb\n",
     "from collections import Counter\n",
     "from collections import defaultdict\n",
+    "import json\n",
     "from langchain_text_splitters import HTMLHeaderTextSplitter, HTMLSectionSplitter\n",
     "import os\n",
     "from pathlib import Path\n",
+    "from pinecone import Pinecone\n",
     "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d95a902a-27dd-410c-aba5-c4d95aeff906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_threat_feeds_secret():\n",
+    "    secret_name = \"threat-feeds-secrets\"\n",
+    "    region_name = \"us-east-2\"\n",
+    "\n",
+    "    # Create a Secrets Manager client\n",
+    "    session = boto3.session.Session()\n",
+    "    client = session.client(\n",
+    "        service_name='secretsmanager',\n",
+    "        region_name=region_name\n",
+    "    )\n",
+    "\n",
+    "    try:\n",
+    "        get_secret_value_response = client.get_secret_value(\n",
+    "            SecretId=secret_name\n",
+    "        )\n",
+    "    except ClientError as e:\n",
+    "        # For a list of exceptions thrown, see\n",
+    "        # https://docs.aws.amazon.com/secretsmanager/latest/apireference/API_GetSecretValue.html\n",
+    "        raise e\n",
+    "\n",
+    "    secret = get_secret_value_response['SecretString']\n",
+    "    return json.loads(secret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9d2dddf9-ab98-45c2-893b-c742884ae5c7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5629a1c2-3040-45e5-8f5e-0af28a7e306e",
    "metadata": {},
    "outputs": [],
@@ -89,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d680989b-8424-4ae4-9b9d-5bb17ac410a6",
    "metadata": {},
    "outputs": [],
@@ -138,56 +182,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "id": "669480e7-1cc6-4187-9fb2-1a301816e91a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_to_pinecone(sq_conn):\n",
+    "    # Initialize database\n",
+    "    with open(\"sqlite_schema.sql\") as f:\n",
+    "        try:\n",
+    "            with sq_conn:\n",
+    "                sq_conn.executescript(f.read())\n",
+    "        except Exception as e:\n",
+    "            print(f\"error applying schema: {e}\")\n",
+    "\n",
+    "    read_cur = sq_conn.cursor()\n",
+    "    update_cur = sq_conn.cursor()\n",
+    "\n",
+    "    pinecone_api_key = get_threat_feeds_secret()['pinecone-api-key']\n",
+    "    pc = Pinecone(api_key=pinecone_api_key)\n",
+    "\n",
+    "    assistant = pc.assistant.Assistant(assistant_name=\"threat-feeds-assistant\")\n",
+    "\n",
+    "    count = 0\n",
+    "    for row in read_cur.execute(\"SELECT id, source FROM report\"):\n",
+    "        report_id, source = row\n",
+    "\n",
+    "        pc_row = None\n",
+    "        with sq_conn:\n",
+    "            pc_row = sq_conn.execute(\"SELECT pinecone_file_id FROM pinecone_reports WHERE report_id = ?\", (report_id,)).fetchone()\n",
+    "\n",
+    "        if pc_row:\n",
+    "            count += 1\n",
+    "            print(f\"Skipped pinecone report {report_id} ({count})\")\n",
+    "            continue\n",
+    "\n",
+    "        pagepath = os.path.join(\"parseddata\", source, f\"{report_id}.txt\")\n",
+    "\n",
+    "        upload_resp = assistant.upload_file(\n",
+    "            file_path=pagepath,\n",
+    "            metadata={\"report_id\": report_id},\n",
+    "            timeout=None\n",
+    "        )\n",
+    "        with sq_conn:\n",
+    "            update_cur.execute(\"\"\"\n",
+    "                INSERT INTO pinecone_reports VALUES (?, ?)\n",
+    "            \"\"\", (report_id, upload_resp.id),)\n",
+    "            \n",
+    "            if update_cur.rowcount != 1:\n",
+    "                raise Exception(f\"update_cur.rowcount = {update_cur.rowcount}\")\n",
+    "        \n",
+    "        count += 1\n",
+    "        print(f\"Uploaded pinecone report {report_id} ({count})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c50757d3-94ba-4e5f-ab7b-8afe54a89ec0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexing documents for SentinelOne\n",
-      "Finished indexing documents for SentinelOne. Total 1949 documents\n",
-      "Indexing documents for Check Point Research\n",
-      "Finished indexing documents for Check Point Research. Total 1949 documents\n",
-      "Indexing documents for Subscribe to Security Magazine's RSS Feed\n",
-      "Finished indexing documents for Subscribe to Security Magazine's RSS Feed. Total 2087 documents\n",
-      "Indexing documents for Microsoft Security Blog\n",
-      "Finished indexing documents for Microsoft Security Blog. Total 2101 documents\n",
-      "Indexing documents for abuse.ch | IT-Security Blog\n",
-      "Finished indexing documents for abuse.ch | IT-Security Blog. Total 2102 documents\n",
-      "Indexing documents for All CISA Advisories\n",
-      "Finished indexing documents for All CISA Advisories. Total 2148 documents\n",
-      "Indexing documents for Unit 42\n",
-      "Finished indexing documents for Unit 42. Total 2148 documents\n",
-      "Indexing documents for Blog\n",
-      "Finished indexing documents for Blog. Total 2171 documents\n",
-      "Indexing documents for WeLiveSecurity\n",
-      "Finished indexing documents for WeLiveSecurity. Total 2171 documents\n",
-      "Indexing documents for Cisco Talos Blog\n",
-      "Finished indexing documents for Cisco Talos Blog. Total 2180 documents\n",
-      "Indexing documents for Threat Intelligence\n",
-      "Finished indexing documents for Threat Intelligence. Total 2182 documents\n",
-      "Indexing documents for CISA News\n",
-      "Finished indexing documents for CISA News. Total 2183 documents\n",
-      "Indexing documents for CISA Blog\n",
-      "Finished indexing documents for CISA Blog. Total 2184 documents\n",
-      "Indexing documents for Sophos News\n",
-      "Finished indexing documents for Sophos News. Total 2188 documents\n",
-      "Indexing documents for SANS Internet Storm Center, InfoCON: green\n",
-      "Finished indexing documents for SANS Internet Storm Center, InfoCON: green. Total 2194 documents\n",
-      "Indexed 2194 documents\n",
-      "Computed similarities for 336 rows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    persist_documents()\n",
+    "    # persist_documents()\n",
     "    \n",
     "    sq_conn = sqlite3.connect(\"reports.db\")\n",
     "    try:\n",
-    "        compute_similarities(sq_conn)\n",
+    "        # compute_similarities(sq_conn)\n",
+    "        upload_to_pinecone(sq_conn)\n",
     "    finally:\n",
     "        sq_conn.close()"
    ]
